logs/Slang/generated/yosys/asicworld_code_hdl_models_cam.sv.log
name: asicworld_code_hdl_models_cam
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_cam.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_cam.v:20:9: error: identifier 'DEPTH' used before its declaration
input  [DEPTH-1:0]       cam_data_in;  
        ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_cam.v:16:11: note: declared here
parameter DEPTH       = 1 << ADDR_WIDTH;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_cam.v:25:6: error: identifier 'ADDR_WIDTH' used before its declaration
reg [ADDR_WIDTH-1:0]  cam_addr_out;
     ^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_cam.v:15:11: note: declared here
parameter ADDR_WIDTH  = 8;
          ^
